--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
           <figure class="top"></figure>
         </div>
       </section>
+      <section class="botones">
+        <div class="boton" id="arriba">▲</div>
+        <div class="boton" id="abajo">▼</div>
+        <div class="boton" id="izquierda">◄</div>
+        <div class="boton" id="derecha">►</div>
+      </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
