--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
       </section>
       <section class="botones">
-        <div class="boton" id="arriba">▲</div>
-        <div class="boton" id="abajo">▼</div>
+        <div class="boton" id="arriba">&#x25b2</div>
+        <div class="boton" id="abajo">&#x25bc</div>
         <div class="boton" id="izquierda">◄</div>
         <div class="boton" id="derecha">►</div>
       </section>
