--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <div class="boton" id="izquierda">◄</div>
         <div class="boton" id="derecha">►</div>
       </section>
+      <div class="container">
+        <div class="bga">
+
+      </div>
+          
+      </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
