--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./iconcss3.ico" type="image/x-icon">
+    <title>Cube and Bga</title>
 </head>
 <body>
     <section class="container">
